fix width witch calc for boxes to make them wrap

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 .fizz,
 .buzz,
 .standard{
-    width: calc((100% / 7) - 1.5rem);
+    width: 100px;
     height: 100px;
     display: flex;
     justify-content: center;
